force-app/main/default/objects/Outcome__c/Outcome__c.object-meta.xml
<CustomObject>
    <label>Outcome</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>