force-app/main/default/objects/Outcome__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Step</label>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Outcomes (Next Step)</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>