force-app/main/default/objects/Outcome__c/fields/Next_Step_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Action__c</fullName>
    <formula>Next_Step__r.Action__c</formula>
    <label>Next Step Action</label>
    <type>Text</type>
</CustomField>