force-app/main/default/objects/Outcome__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The process that is related to the outcome</description>
    <label>Process</label>
    <referenceTo>Process__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>