force-app/main/default/objects/Outcome__c/fields/Step_Id__c.field-meta.xml
<CustomField>
    <fullName>Step_Id__c</fullName>
    <label>Step Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>